# pubmed-search-mcp

./: .bandit  .gitignore  .instruction_drift_fingerprint  .mutmut_config.py  .mypy.ini  .ngrok.env  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CHANGELOG_0.1.20.md  CITATION.cff  CONSTITUTION.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  LICENSE  README.md  README.zh-TW.md  ROADMAP.md  docker-compose.https.yml  docker-compose.yml  pyproject.toml  run_copilot.py  run_server.py  smithery.yaml  start.sh  test_client.py  test_perf.py  vulture_whitelist.py
.asset-aware-mcp/: assistant-assets.json
.claude/skills/git-doc-updater/: SKILL.md
.claude/skills/git-precommit/: SKILL.md
.claude/skills/pipeline-persistence/: SKILL.md
.claude/skills/pubmed-export-citations/: SKILL.md
.claude/skills/pubmed-fulltext-access/: SKILL.md
.claude/skills/pubmed-gene-drug-research/: SKILL.md
.claude/skills/pubmed-mcp-tools-reference/: SKILL.md
.claude/skills/pubmed-multi-source-search/: SKILL.md
.claude/skills/pubmed-paper-exploration/: SKILL.md
.claude/skills/pubmed-pico-search/: SKILL.md
.claude/skills/pubmed-quick-search/: SKILL.md
.claude/skills/pubmed-systematic-search/: SKILL.md
.claude/skills/readme-i18n/: SKILL.md
.clinerules/: 00-workspace-baseline.md  10-python-ddd.md  20-docs-and-generated-assets.md  30-mcp-surface-and-sync.md  50-pubmed-project.md  70-pubmed-mcp-tools.md
.clinerules/workflows/: release-publish.md  setup-dual-agent-harness.md  skills-audit.md  sync-mcp-surface.md  validate-repo.md
.github/: copilot-instructions.md  zotero-research-workflow.md
.github/agents/: architect.agent.md  ask.agent.md  audit.agent.md  code.agent.md  context-loader.agent.md  debug.agent.md  orchestrator.agent.md  research.agent.md  test-runner.agent.md
.github/bylaws/: python-environment.md
.github/hooks/: copilot-tool-policy.json  pipeline-enforcer.json
.github/workflows/: ci.yml  pages.yml  publish.yml  wiki.yml
copilot-studio/: README.md  openapi-schema.yaml
data/pipeline_examples/: ai_in_anesthesiology.yaml  comprehensive_crispr_therapy.yaml  exploration_seed_paper.yaml  gene_drug_brca1.yaml  pico_remimazolam_vs_propofol.yaml
docs/: ADVANCED_RESEARCH_WORKFLOWS.md  ADVANCED_RESEARCH_WORKFLOWS.zh-TW.md  ALGORITHM_INNOVATION_RESEARCH.md  CLINICALKEY_AI_INTEGRATION.md  COPILOT_HOOKS_PIPELINE_ENFORCEMENT.md  DEEP_RESEARCH_ARCHITECTURE_ANALYSIS.md  DEVELOPER_GUIDE.md  DEVELOPER_GUIDE.zh-TW.md  FULLTEXT_REGISTRY_REFACTOR.md  IMAGE_SEARCH_API.md  INTEGRATIONS.md  MCP_Visual_Data_Retrieval_Spec.md  OPENALEX_API.md  PHASE_2.1_TOOL_REFACTOR.md  PHASE_3_PUBTATOR_EUTILS.md  PHASE_4_IMAGE_SEARCH.md  PIPELINE_MODE_TUTORIAL.en.md  PIPELINE_MODE_TUTORIAL.md  PIPELINE_PERSISTENCE_DESIGN.md  PYTHON_SDK_AND_HTTP_CLI_DESIGN.md  REPO_SEPARATION_PRINCIPLES.md  RESEARCH_CHRONICLE_REFACTOR_SPEC.md  SEMANTIC_SCHOLAR_API.md  SOURCE_CONTRACTS.md  TOOLS_USAGE_GUIDE.md  TOOLS_USAGE_GUIDE.zh-TW.md  TOOLUNIVERSE_MEDICAL_CALC_PR_GUIDE.md  TOOLUNIVERSE_PR_UPDATE.md  TOOL_CONSOLIDATION_DESIGN.md  USER_GUIDE.md  USER_GUIDE.zh-TW.md  competitor-analysis.md  index.html  paper-draft.md  pubmed-search-mcp-improvement-report.md  site-content.js  site.css  site.js
docs/arxiv-paper/: .gitignore  main.tex  references.bib
docs/reports/: repo-complexity-analysis-2026-06-05.md  repo-hardening-subagent-audit-2026-06-05.md  repo-import-surface-audit-2026-06-05.md  repo-optimization-followup-2026-06-05.md
docs/site-content/: advanced-workflows-zh.md  advanced-workflows.md  architecture.md  deployment.md  developer-guide-zh.md  developer-guide.md  overview-zh.md  overview.md  pipeline-tutorial-zh.md  pipeline-tutorial.md  python-sdk-http-cli-design.md  quick-reference.md  research-chronicle-rebuild-spec.md  source-contracts.md  tools-usage-guide-zh.md  tools-usage-guide.md  troubleshooting.md  user-guide-zh.md  user-guide.md
memory-bank/: activeContext.md  architect.md  decisionLog.md  productContext.md  progress.md  projectBrief.md  systemPatterns.md
nginx/: nginx.conf
scripts/: build_docs_site.py  build_github_wiki.py  check_async_tests.py  check_cline_skills.py  count_mcp_tools.py  generate-ssl-certs.sh  research_fulltext_apis.py  run_all_tests.ps1  run_https_local.py  run_mutation_gate.py  run_mutation_tests.ps1  run_security_scan.ps1  setup-ngrok.sh  setup-vscode-ai-harness.sh  start-copilot-ngrok.sh  start-copilot-studio.sh  start-https-docker.sh  start-https-local.sh  test-copilot-mcp.py
scripts/hooks/: check_commit_size.py  check_ddd_layers.py  check_docstring_tools.py  check_env_config.py  check_evolution_cycle.py  check_file_hygiene.py  check_future_annotations.py  check_instruction_drift.py  check_no_print.py  check_skills_frontmatter.py  check_source_counts.py  check_todo_scanner.py  check_tool_sync.py  check_type_ignore.py  check_unicode_mojibake.py
scripts/perf/: complexity_scan.py  import_surface_audit.py
src/pubmed_search/: __init__.py  api.py  client.py  container.py  http_client.py  session.py
tests/: __init__.py  conftest.py  test_90_percent.py  test_advanced_filters.py  test_agent_docs_alignment.py  test_article_extended.py  test_async_utils.py  test_auto_relaxation.py  test_browser_session.py  test_cache_substrate.py  test_check_skills_frontmatter.py  test_citation_tree.py  test_citation_tree_tools.py  test_client.py  test_clinical_trials_client.py  test_complexity_scan.py  test_composite_params.py  test_comprehensive_coverage.py  test_container.py  test_copilot_hook_integration.py  test_copilot_hook_policy.py  test_copilot_tools.py  test_copilot_tools_extended.py  test_core_module.py  test_core_ncbi_extended.py  test_core_tools.py  test_crossref_client.py  test_discovery_tools.py  test_discovery_tools_extended.py  test_docs_site_sync.py  test_e2e_workflows.py  test_entrez_modules.py  test_entrez_runtime_isolation.py  test_entrez_utils.py  test_europe_pmc.py  test_europe_pmc_tools.py  test_europe_pmc_tools_extended.py  test_evolution_cycle_policy.py  test_exceptions.py  test_export_tools.py  (+97 more)
tests/benchmarks/: test_benchmarks.py
(+250 files in other folders)
