[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pubmed-search-mcp"
version = "0.2.1"
description = "MCP server for PubMed literature search with MeSH, PICO, and intelligent query expansion"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "u9401066", email = "u9401066@gap.kmu.edu.tw" }
]
keywords = [
    "pubmed",
    "entrez",
    "ncbi",
    "literature",
    "medical",
    "research",
    "search",
    "mcp",
    "model-context-protocol"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

dependencies = [
    "biopython>=1.81",
    "requests>=2.28.0",
    "pylatexenc>=2.10",  # Unicode to LaTeX conversion for BibTeX export
    "mcp>=1.0.0",  # MCP protocol - required for MCP server functionality
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "pywin32>=311; sys_platform == 'win32'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]
all = [
    "pubmed-search-mcp[dev]",
]

[project.scripts]
pubmed-search-mcp = "pubmed_search.presentation.mcp_server:main"

[project.urls]
Homepage = "https://github.com/u9401066/pubmed-search-mcp"
Repository = "https://github.com/u9401066/pubmed-search-mcp"
Issues = "https://github.com/u9401066/pubmed-search-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/pubmed_search"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/LICENSE",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "integration: marks tests as integration tests (may make real API calls)",
    "slow: marks tests as slow running",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[dependency-groups]
dev = [
    "deptry>=0.24.0",
    "mypy>=1.19",
    "pytest>=9.0",
    "pytest-asyncio>=0.26",
    "pytest-cov>=7.0",
    "ruff>=0.14",
    "pytest-benchmark>=5.1.0",
    "mutmut>=3.2.0",
    "bandit>=1.8.0",
    "safety>=3.2.10",
    "pytest-timeout>=2.3.1",
    "vulture>=2.14",
]
