[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pubmed-search-mcp"
version = "0.2.2"
description = "MCP server for PubMed literature search with MeSH, PICO, and intelligent query expansion"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "u9401066", email = "u9401066@gap.kmu.edu.tw" }
]
keywords = [
    "pubmed",
    "entrez",
    "ncbi",
    "literature",
    "medical",
    "research",
    "search",
    "mcp",
    "model-context-protocol"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

dependencies = [
    "biopython>=1.81",
    "requests>=2.28.0",
    "pylatexenc>=2.10",  # Unicode to LaTeX conversion for BibTeX export
    "mcp>=1.0.0",  # MCP protocol - required for MCP server functionality
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "pywin32>=311; sys_platform == 'win32'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]
all = [
    "pubmed-search-mcp[dev]",
]

[project.scripts]
pubmed-search-mcp = "pubmed_search.presentation.mcp_server:main"

[project.urls]
Homepage = "https://github.com/u9401066/pubmed-search-mcp"
Repository = "https://github.com/u9401066/pubmed-search-mcp"
Issues = "https://github.com/u9401066/pubmed-search-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/pubmed_search"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/LICENSE",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "integration: marks tests as integration tests (may make real API calls)",
    "slow: marks tests as slow running",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[dependency-groups]
dev = [
    "deptry>=0.24.0",
    "mypy>=1.19",
    "pytest>=9.0",
    "pytest-asyncio>=0.26",
    "pytest-cov>=7.0",
    "ruff>=0.14",
    "pytest-benchmark>=5.1.0",
    "mutmut>=3.2.0",
    "bandit>=1.8.0",
    "safety>=3.2.10",
    "pytest-timeout>=2.3.1",
    "vulture>=2.14",
    "types-requests>=2.32.4.20260107",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false
warn_no_return = false
warn_unreachable = false
strict_equality = false
ignore_missing_imports = true
# Allow dynamic typing for API responses and external data
allow_untyped_calls = true
allow_untyped_defs = true
# Disable warnings that are overly strict for production code with external APIs
disable_error_code = ["no-any-return", "unreachable", "misc"]

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "pubmed_search.infrastructure.sources.*"
# External API responses are inherently dynamic
warn_return_any = false
allow_untyped_defs = true

[[tool.mypy.overrides]]
module = "pubmed_search.infrastructure.ncbi.*"
# NCBI API responses can be complex
warn_return_any = false
allow_untyped_defs = true

[[tool.mypy.overrides]]
module = "pubmed_search.presentation.mcp_server.*"
# MCP server tools work with dynamic data
allow_untyped_defs = true
